# ros-behavior-scripting

./: .gitignore  CMakeLists.txt  README.md  package.xml
face_track/: face_atomic.py  face_track.py
movement/: atomic-dbg.py  atomic.py  movement.scm  ros_commo.py
ros_bridge/: face_track.py  main.py  room_brightness.py  saliency_track.py  sound_track.py
scripts/: cogserver.conf  config.scm  install.sh  opencog.conf  purge-head-packages.sh  run.sh  setup.bash  setup.sh
sensors/: atomic_msgs.py  audio_power.py  chat_track.py  face_recog.py  face_track.py  main.py  netcat.py  room_brightness.py  rosbridge_googlespeech.py  rosbridge_people_model.py  rosbridge_peoplemodel.py
sensors/non-functional/: saliency_track.py
src/: atomic.py  btree-psi.scm  btree.scm  psi-dynamics.scm  ros_commo.py  time-map.scm
webui/: atomic_psi.py  psi_ctrl.py
